--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -23,19 +19,16 @@ a:hover {
 }
 
 body {
+  /* place-items: center; */
+  padding: 0;
   margin: 0;
-  display: flex;
-  place-items: center;
+  background: #fff;
   min-width: 320px;
   min-height: 100vh;
+  color: #333;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -52,7 +45,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -65,4 +58,14 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+p,
+ul,
+li,
+h1 {
+  margin: 0;
+  padding: 0;
+}
+input {
+  font-size: 18px;
 }
