--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,23 +1,20 @@
 .SearchBox {
-  margin-top: 20px;
+  margin: 15px 0 30px 28px;
 }
 .label {
   width: 300px;
-  color: black;
+  color: #6d6e71;
   font-weight: 700;
   font-size: 20px;
-
-  margin: 24px 0px 0px 125px;
 }
 .input {
   display: block;
+  margin: 5px;
   height: 30px;
-  width: 400px;
+  width: 350px;
   padding: 5px;
-  margin-left: 20px;
-  margin-bottom: 30px;
   border-radius: 4px;
-  background-color: wheat;
+  background-color: #d3d3d3;
   box-shadow: -10px 0 10px -10px rgba(0, 0, 0, 0.5),
     10px 0 10px -10px rgba(0, 0, 0, 0.5), 0 10px 10px -10px rgba(0, 0, 0, 0.5);
 }
