--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -6,13 +6,15 @@
   position: fixed;
   z-index: 1;
   width: 100%;
-  color: wheat;
+  color: #333333;
   gap: 8px;
+  margin: 0;
   padding: 10px;
-  background-image: linear-gradient(to left, #04ceaf, #008080);
-  border-bottom: 2px solid #474f52;
-  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  background-color: #f24e5e;
+  border-bottom: 2px solid #6d6e71;
+  box-shadow: 0 10px 10px -10px rgba(128, 128, 128, 0.5);
 }
+
 .homeIcon {
   margin-right: 8px;
   font-size: 35px;
@@ -33,20 +35,21 @@
   width: 400px;
   flex-direction: column;
   padding: 28px;
-  border: 1px solid black;
+  border-color: transparent;
   margin-top: 60px;
   align-items: center;
   justify-content: space-around;
-  border-radius: 4px;
+  /* border-radius: 4px;
+  border: 1px solid black;
   border: 1px solid #474f52;
   box-shadow: -10px 0 10px -10px rgba(0, 0, 0, 0.5),
-    10px 0 10px -10px rgba(0, 0, 0, 0.5), 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    10px 0 10px -10px rgba(0, 0, 0, 0.5), 0 10px 10px -10px rgba(0, 0, 0, 0.5); */
 }
 
 .contactFormlabel {
   display: block;
   margin-bottom: 4px;
-  color: black;
+  color: #6d6e71;
   font-size: 18px;
   font-weight: 700;
   font-size: x-large;
@@ -59,26 +62,30 @@
   margin-bottom: 24px;
   padding: 5px;
   border-radius: 4px;
-  background-color: wheat;
+  background-color: #d3d3d3;
+  box-shadow: -10px 0 10px -10px rgba(0, 0, 0, 0.5),
+    10px 0 10px -10px rgba(0, 0, 0, 0.5), 0 10px 10px -10px rgba(0, 0, 0, 0.5);
 }
 
 .contactFormBtn {
   margin-top: 20px;
-  color: black;
-  background-color: #1bdfdfce;
+  color: #6d6e71;
+  background-color: #77dd77;
   padding: 10px;
   cursor: pointer;
   display: block;
   height: 50px;
   width: 150px;
   margin: 0 auto;
-  border: 2px solid #474f52;
+  border: 2px solid #6d6e71;
   box-shadow: -10px 0 10px -10px rgba(0, 0, 0, 0.5),
     10px 0 10px -10px rgba(0, 0, 0, 0.5), 0 10px 10px -10px rgba(0, 0, 0, 0.5);
 }
 .contactFormBtn:hover {
-  background-color: rgba(44, 193, 216, 0.872);
-  border-color: #1bdfdfce;
+  outline: none;
+  border-bottom: transparent;
+  background-color: rgba(119, 221, 119);
+  border-color: #8ff628ce;
 }
 .error {
   color: rgb(255, 0, 0, 0.872);
