--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,10 +1,11 @@
 .list {
   width: 100%;
   padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   gap: 8px;
 }
 .item {
@@ -12,7 +13,7 @@
   max-width: 350px;
   justify-content: space-between;
   border: 1px solid #000;
-  background-color: wheat;
+  background-color: #d3d3d3;
   border-radius: 8px;
   padding: 20px;
   margin-bottom: 24px;
