--- a/src/index.css
+++ b/src/index.css
@@ -19,16 +19,15 @@ a:hover {
 }
 
 body {
-  /* place-items: center; */
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   background: #fff;
   min-width: 320px;
   min-height: 100vh;
   color: #333;
 }
 
-/* button {
+button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -45,7 +44,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-} */
+}
 
 @media (prefers-color-scheme: light) {
   :root {
