--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,11 +1,13 @@
 .phoneBook {
   display: flex;
   top: 0;
+  left: 0;
   font-weight: 800;
   font-size: x-large;
   position: fixed;
   z-index: 1;
   width: 100%;
+
   color: #333333;
   gap: 8px;
   margin: 0;
